# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(tictactoe)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
#  add_subdirectory(movingtriangle)
# add_subdirectory(asteroids)
# add_subdirectory(jumpingsquare)
# add_subdirectory(loadmodel)
# add_subdirectory(futuristicmuseum)
add_subdirectory(lookat)

#add_subdirectory(museum)
